...
        let aspiration = Aspiration(title: title)
        insert(aspiration)
        return aspiration
    }

    func makeMetric(
        name: String = "Reading",
        type: MeasurementType = .duration,
        unit: String? = nil
    ) -> Metric {
        let metric = Metric(name: name, measurementType: type, unit: unit)
        insert(metric)
        return metric
...
